--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 #display {
-    width: 90%;
+    width: 100%;
     height: 20%;
     background-color: #34772d;
     border-radius: 8px;
@@ -40,6 +40,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: flex-start;
 }
 
 #numbers {
@@ -49,7 +50,6 @@ body {
 #operators {
     width: 40%;
 }
-
 
 button {
     width: 70px;
