--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 350px;
-    height: 450px;
+    height: 460px;
     background-color: gray;
     margin-top: 32px;
     border-radius: 16px;
@@ -38,7 +38,18 @@ body {
     height: 75%;
 }
 
-#numbers, #operators {
+#special-buttons {
+    display: flex;
+    align-self: flex-start;
+    width: 100%;
+}
+
+#equal-btn {
+    flex-grow: 1;
+}
+
+#numbers,
+#operators {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -56,6 +67,9 @@ body {
 button {
     width: 70px;
     height: 70px;
+}
+
+#buttons button {
     flex-grow: 1;
 }
 
@@ -65,4 +79,8 @@ button {
 
 #numbers button {
     background-color: rgb(255, 255, 101);
+}
+
+#special-buttons button {
+    background-color: rgb(101, 255, 101);
 }
