--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 350px;
-    height: 460px;
+    height: 400px;
     background-color: gray;
     margin-top: 32px;
     border-radius: 16px;
@@ -25,7 +25,7 @@ body {
 #display {
     width: 100%;
     height: 20%;
-    background-color: #34772d;
+    background-color: #408f35;
     border-radius: 8px;
     margin-top: 5%;
     text-align: right;
@@ -36,16 +36,6 @@ body {
 #buttons {
     display: flex;
     height: 75%;
-}
-
-#special-buttons {
-    display: flex;
-    align-self: flex-start;
-    width: 100%;
-}
-
-#equal-btn {
-    flex-grow: 1;
 }
 
 #numbers,
@@ -67,6 +57,11 @@ body {
 button {
     width: 70px;
     height: 70px;
+    border: 1px solid rgb(41, 41, 41);
+    border-radius: 4px;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
 }
 
 #buttons button {
@@ -74,13 +69,17 @@ button {
 }
 
 #operators button {
-    background-color: rgb(255, 175, 122);
+    background-color: rgb(172, 90, 35);
 }
 
 #numbers button {
-    background-color: rgb(255, 255, 101);
+    background-color: rgb(66, 66, 66);
 }
 
-#special-buttons button {
-    background-color: rgb(101, 255, 101);
+#operators .special {
+    background-color: rgb(53, 90, 36);
+}
+
+#operators #clear-btn {
+    background-color: rgb(136, 56, 50);
 }
